# spmfilter-clamav

./: .hgignore  AUTHORS  CMakeList.txt  CMakeLists.txt  ChangeLog  INSTALL  README  configure.ac
contrib/: spmfilter-clamav.spec  spmfilter-clamav_el5.spec  virus-notify.txt
man/: CMakeLists.txt  spmfilter-clamav.1
src/: CMakeList.txt  CMakeLists.txt  Makefile.am  main.c  main.h
